Add Extra Header!

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                <hr>
                <hr>
                <hr>
+               <h1>I decided to add one extra Header becouse of explore my git</h1>
                 <div class="mainPhrases">
                    <h1>html practice</h1>
                    <h2>work with tables</h2>
